<resources>
    <string name="app_name">Login</string>
    <string name="titulo">¡Que gusto verte!\nBienvenido a ArtApp</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="boton_login">Iniciar Sesión</string>
    <string name="titulo2">¿Olvidaste tu contraseña?</string>
    <string name="titulo3">Registrarse</string>
    <string name="titulo4">Pantalla Home en Desarrollo</string>
    <string name="regresar">Regresar</string>
</resources>